--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/8f16afd41eae6f1576d69ccfd99dd913'/></h2>
-Unlocked        2/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 3 points<br>
+Unlocked        2/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 6 points<br>
 <ul>
 <li><div class="title">Apprentice Historian (Level 1)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
+<li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   4 status
-   2 log
+   5 status
+   4 log
+   1 branch
    1 achievements
    1 --help
 </pre>
