--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/8f16afd41eae6f1576d69ccfd99dd913'/></h2>
-Unlocked        2/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 6 points<br>
+Unlocked        3/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 7 points<br>
 <ul>
 <li><div class="title">Apprentice Historian (Level 1)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
+<li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
    5 status
-   4 log
+   5 log
+   1 config
    1 branch
    1 achievements
    1 --help
@@ -53,7 +55,6 @@ There are       51 Achievements. Some achievements can be leveled up depending o
 <li><div class="title">Delivery Boy</div><div class="info">Move objects and refs by archive with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bundle.html">git-bundle</a>.</div></li>
 <li><div class="title">Dentist</div><div class="info">Extracted patches using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -p.</div></li>
 <li><div class="title">Fisherman</div><div class="info">Look for specified patterns in the current repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-grep.html">git-grep</a>.</div></li>
-<li><div class="title">Garage Inventor</div><div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Gardner</div><div class="info">Shows the commit ancestry graph with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show-branch.html">git-show-branch</a></div></li>
 <li><div class="title">Gipsy</div><div class="info">Create, list, delete a tag signed with GPG using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-tag.html">git-tag</a></div></li>
 <li><div class="title">Goldsmith</div><div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
