--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/8f16afd41eae6f1576d69ccfd99dd913'/></h2>
-Unlocked        8/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 53 points<br>
+Unlocked        9/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 54 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -28,23 +28,25 @@ Unlocked        8/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Stone Mason (Level 1)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 2)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 3)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Dentist</div>  <div class="info">Extracted patches using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -p.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Historian (Level 4)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  37 status
-  22 log
-  16 checkout
-  10 commit
-   8 stash
-   8 add
-   7 rebase
-   5 diff
-   4 reset
+  45 status
+  31 log
+  22 checkout
+  15 commit
+  13 add
+  10 stash
+   9 rebase
+   6 reset
+   6 diff
    3 config
-   1 branch
+   3 branch
+   1 merge
    1 achievements
    1 --help
 </pre>
@@ -73,7 +75,6 @@ There are       51 Achievements. Some achievements can be leveled up depending o
 <li><div class="title">Cleaning lady</div><div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Collector</div><div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Delivery Boy</div><div class="info">Move objects and refs by archive with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bundle.html">git-bundle</a>.</div></li>
-<li><div class="title">Dentist</div><div class="info">Extracted patches using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -p.</div></li>
 <li><div class="title">Fisherman</div><div class="info">Look for specified patterns in the current repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-grep.html">git-grep</a>.</div></li>
 <li><div class="title">Gardner</div><div class="info">Shows the commit ancestry graph with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show-branch.html">git-show-branch</a></div></li>
 <li><div class="title">Gipsy</div><div class="info">Create, list, delete a tag signed with GPG using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-tag.html">git-tag</a></div></li>
