New achievement Apprentice Architect (Level 2)

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/8f16afd41eae6f1576d69ccfd99dd913'/></h2>
-Unlocked       21/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 156 points<br>
+Unlocked       21/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 159 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
+<li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -82,12 +83,12 @@ Git commands sorted by usage:
   10 show
    7 fetch
    6 revert
+   4 init
    4 config
    4 clean
    3 rm
    3 reflog
    3 merge
-   3 init
    3 help
    2 pull
    1 achievements
